# Ryven

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  CREDITS.md  LICENSE  MANIFEST.in  README.md  debug.py  default.nix  mypy.ini  rebuild.sh  recreate_uic_files.bat  recreate_uic_files.sh  reinstall.bat  reinstall.sh  requirements.txt  ryvencore-drawio.xml  setup.cfg  setup.py  shell.nix  test.py
.github/: CONTRIBUTING.md
Ryven/: NENV.py  NIENV.py  NIWENV.py  NWENV.py  Ryven.py  Ryven.pyw  dark_ryven.xml  design_config.json  light_ryven.xml  test_console_matrices.bat
Ryven_Console/: NIENV.py  Ryven_Console.py
Ryven_NodeManager/: CustomInputWidget.py  EditInputWidget_Dialog.py  EditSrcCode_PushButton.py  InputWidget.py  MainWindow.py  Node.py  NodeContentWidget.py  NodeInput.py  NodeOutput.py  Node_ListWidget.py  NodesListWidget.py  NodesList_NodeWidget.py  PreviewAllCodesDialog.py  SaveDialog.py  files_manager.py  ui_node_manager_mainwindow.py  ui_node_manager_node_content_widget.py
Ryven_PackageTranslator/: Ryven_PackageTranslator.py
docs/: README.md  index.html  index.md  notizen.md
pyScript/: pyScript - Verknüpfung.lnk  pyScript.lnk  pyScript.py
pyScript_NodeManager/: CodeEditor.py  EditMainWidget_Dialog.py  EditSourceCode_Dialog.py  InputWidget.py  MainWindow.py  Node.py  NodeContentWidget.py  NodeInput.py  NodeOutput.py  SaveDialog.py  pyScript NodeManager.py  ui_node_manager_mainwindow.py  ui_node_manager_node_content_widget.py
pyScript_PackageTranslator/: pyScript_PackageTranslator.py
pyScript_ui_stuff/: MainWindow.cpp  main_window.ui  node_manager_manual_programming.ui  script.ui  ui_class.py  ui_main_window.py  ui_script.py
ryven/: NENV.py  __init__.py  gui_env.py  node_env.py
ryven-editor/: default.nix  result  setup.cfg  setup.py
ryven-editor/ryven/: api.py  gui_env.py
ryven-editor/ryven/example_nodes/OpenCV/: nodes.py
ryven-editor/ryven/example_nodes/Subpackage Test/: nodes.py
ryven-editor/ryven/example_nodes/Subpackage Test/linalg/: README.md  gui.py  nodes.py
ryven-editor/ryven/example_nodes/Subpackage Test/std/: control_structures.py  nodes.py
ryven-editor/ryven/example_nodes/example/sub1/: gui.py  nodes.py
ryven-editor/ryven/example_nodes/example/sub2/: gui.py  nodes.py
ryven-editor/ryven/example_nodes/examples/: README.md  basic_operators.py  control_structures.py  gui.py  nodes.py  special_nodes.py
ryven-editor/ryven/example_nodes/inspector_example/: gui.py  nodes.py
ryven-editor/ryven/example_nodes/linalg/: gui.py  matrices.py  nodes.py
ryven-editor/ryven/example_nodes/pkg_test/: nodes.py
ryven-editor/ryven/example_nodes/pkg_test/linalg/: gui.py  nodes.py
ryven-editor/ryven/example_nodes/pkg_test/std/: basic_operators.py  control_structures.py  gui.py  nodes.py  special_nodes.py
ryven-editor/ryven/example_nodes/std/: README.md  basic_operators.py  control_structures.py  gui.py  special_nodes.py
ryven-editor/ryven/example_nodes/sub_nodes_example/: nodes.py
ryven-editor/ryven/example_nodes/sub_nodes_example/sub1/: nodes.py
ryven-editor/ryven/example_nodes/sub_nodes_example/sub2/: nodes.py
ryven-editor/ryven/example_nodes/traits_inspector_test/: gui.py  nodes.py
ryven-editor/ryven/example_projects/: basics.json  matrices.json
ryven-editor/ryven/gui/: dialogs.py  flow_ui.py  main_console.py  main_window.py  std_input_widgets.py
ryven-editor/ryven/gui/code_editor/: CodePreviewWidget.py  SourceCodeUpdater.py  codes_storage.py
ryven-editor/ryven/gui/startup_dialog/: StartupDialog.py
ryven-editor/ryven/gui/styling/: window_theme.py
ryven-editor/ryven/gui/uic/: README.md  flow.ui  flow_window.ui  main_window.ui  ui_flow_window.py  ui_main_window.py
ryven-editor/ryven/main/: Ryven.py  RyvenConsole.py  args_parser.py  config.py  utils.py
ryven-editor/ryven/resources/stylesheets/: style_template.css
ryven.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ryvencore-qt/: MANIFEST.in  README.md  default.nix  setup.cfg
ryvencore-qt/ryvencore_qt/: __init__.py
ryvencore-qt/ryvencore_qt/src/: Design.py  GUIBase.py  GlobalAttributes.py  RCQT.py  README.md  SessionGUI.py  utils.py
ryvencore-qt/ryvencore_qt/src/flows/: FlowCommands.py  FlowTheme.py  FlowView.py  FlowViewProxyWidget.py  FlowViewStylusModesWidget.py  FlowViewZoomWidget.py  README.md
ryvencore-qt/ryvencore_qt/src/flows/connections/: ConnectionAnimation.py  ConnectionItem.py
ryvencore-qt/ryvencore_qt/src/flows/drawings/: DrawingObject.py
ryvencore-qt/ryvencore_qt/src/flows/node_list_widget/: NodeListWidget.py  NodeWidget.py  utils.py
ryvencore-qt/ryvencore_qt/src/flows/nodes/: InspectorGUI.py  NodeErrorIndicator.py  NodeGUI.py  NodeInspector.py  NodeItem.py  NodeItemAction.py  NodeItemAnimator.py  NodeItemWidget.py  NodeItem_CollapseButton.py  NodeItem_Icon.py  NodeItem_TitleLabel.py  PortItem.py  PortItemInputWidgets.py  WidgetBaseClasses.py
ryvencore-qt/ryvencore_qt/src/widgets/: EditVal_Dialog.py  FlowsListWidget.py  FlowsList_FlowWidget.py  ListWidget_NameLineEdit.py  LogWidget.py  VariablesListWidget.py  VarsList_VarWidget.py  __init__.py
saves/: asdf.rpo  asdf2.rpo  content1.txt  ex2.rpo  ex3.rpo  example.pypro  examples.pypro  examples.rpo  examples.rypo  examples2.pypro  examples2.rpo  examples_big.rypo  full_test.pypro  full_test_incl_perceptron__old_packages.pypro  full_test_new.pypro  full_test_new2.pypro  full_test_new3.pypro  full_test_new4.pypro  full_test_new5.pypro  full_test_new6.pypro  full_test_new7.pypro  full_test_new8.pypro  full_test_new9.pypro  functions1.rpo  linalg.rpo  matplotlib_tests.rpo  mixed examples.rpo  mixed examples2.rpo  mixed examples3.rpo  mixed examples4_short2.rpo  mixed examples4_short3.rpo  mixed examples4_short4.rpo  mixed examples4_short5.rpo  mixed examples4_short6.rpo  mixed examples4_short8.rpo  mixed examples5 NEW.rpo  mixed examples6.rpo  (+101 more)
(+880 files in other folders)
