[metadata]
name = ryven
version = v3.1.0
author = Leon Thomm
author_email = l.thomm@mailbox.org
description = Flow-based visual scripting for Python
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/leon-thomm/Ryven
project_urls =
    Website = https://ryven.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    ryvencore-qt @ git+https://github.com/leon-thomm/ryvencore-qt.git@dev
    Jinja2
    Pygments
    textdistance

[options.entry_points]
console_scripts =
    ryven = ryven:run_ryven
    ryven_console = ryven:run_ryven_console
