[metadata]
name = ryven
version = 3.5.0
author = Leon Thomm
author_email = l.thomm@mailbox.org
description = Flow-based visual scripting for Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
    LICENSE
url = https://github.com/leon-thomm/Ryven
project_urls =
    Website = https://ryven.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6, <3.13
install_requires =
    ryvencore-qt ==0.5.*
    ryvencore ==0.5.*
    Jinja2
    Pygments
    textdistance
    packaging

[optionas.extras_require] 
PySide2 =
    PySide2
PySide6 =
    PySide6 = <6.7

[options.entry_points]
console_scripts =
    ryven = ryven:run_ryven
    ryven-console = ryven:run_ryven_console
