[metadata]
name = ryvencore-qt
version = v0.4.0a2
author = Leon Thomm
author_email = l.thomm@mailbox.org
description = Qt frontend for ryvencore; Library for building Visual Node Editors
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/leon-thomm/ryvencore-qt
project_urls =
    Website = https://ryven.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    ryvencore ==0.4.*
    PySide2
    QtPy
    waiting
    textdistance
