[metadata]
name = ryvencore-qt
version = v0.5.0
author = Leon Thomm
author_email = l.thomm@mailbox.org
description = Qt frontend for ryvencore; Library for building Visual Node Editors
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/leon-thomm/ryvencore-qt
project_urls =
    Website = https://ryven.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6, <3.13
install_requires =
    ryvencore ==0.5.*
    QtPy
    waiting
    textdistance
